<resources>
    <string name="app_name">AlignedApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="wall_post">We do not post anything to your wall without your permission</string>
    <string name="facebook_app_id">1075595345818207</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_main">Home</string>
    <string name="msg">MESSAGES</string>
    <string name="logoutt">LOGOUT</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">HOME</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">MESSAGES</string>
    <string name="nav_item_settings">SETTINGS</string>
    <string name="nav_item_help">HELP</string>
    <string name="nav_item_share">SHARE</string>
    <string name="nav_item_logout">LOGOUT</string>

    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_notifications</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_help</item>
        <item>@string/nav_item_share</item>
        <item>@string/nav_item_logout</item>



    </string-array>

    <string name="title_messages">MESSAGES</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    
    

    <string name="logout_text">Are you sure you want to logout? \n You will continue to be seen by compatible users in your last known location</string>
    <string name="delete_account_text">Deleting your account will permanently delete your profile, message, photos and matches. If you\'d keep your account but simply hide your card. You can disable discovery instead. \n \n Are you sure you want to delete your account?</string>
    <string name="myprofile">Profile</string>
    <string name="network_string">Please Check Network Connection</string>
    <string name="enter_message">Please enter message</string>
    <string name="request_timeout">Request timeout</string>
    <string name="settings">Settings</string>
    <string name="findingpeopleneartou">Finding People Near You</string>
    <string name="femaletextview">Female</string>
    <string name="text_jevish">only jewish friends</string>
    <string name="maletextview">Male</string>
    <string name="imtextview">I Am</string>
    <string name="showmetex">Show Me</string>
    <string name="limittosearch">Distance</string>
    <string name="showagetextview">Age</string>
    <string name="showdistancetextview">Show Distance in</string>
    <string name="mitext">Mi.</string>
    <string name="kimetertext">Km.</string>
    <string name="alert">Alert</string>
    <string name="retriedmessage">Sorry! Operation failed please try again!</string>
    <string name="contactustext">Contact Us</string>
    <string name="update">Update</string>
    <string name="deleteaccount">Delete Account </string>
    <string name="logouttext">Log Out</string>
    <string name="okbuttontext">OK</string>
    <string name="imagefilename">profilepic</string>
    <string name="gridviewimage">image</string>
    <string name="imagedire">ProfileImages</string>
    <string name="imagedirematchuserdirectory">matchuser</string>
    <string name="imagedirectory">ProfilePick</string>
    <string name="alubumpic">AlubumPic</string>
    <string name="appdirectory">Tinder</string>
    <string name="login">Sign in with Facebook</string>
    <string name="instructions">Login to create a link to fetch account data</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="loginfaildalerttilel">Alert</string>
    <string name="cancel">Cancel</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>


    <!-- original fb id -->
    <!-- <string name="app_id">599645053447820</string> -->


    <!-- v2 id -->
    <!-- <string name="app_id">447440705391654</string> -->


    <!-- new one -->
    <!-- <string name="app_id">447454428723615</string> -->


    <!-- fb id kishan -->
    <!-- <string name="app_id">529053713866542</string> -->


    <!-- fb id deep M. -->
    <string name="app_id">918262531582355</string>
    <!--     <string name="app_id">479939445518456</string> -->

    <!--     <string name="app_id">976697405704736</string> -->
    <string name="pleasewaitmessage">Please wait&#8230;</string>
    <string name="internetconnectionerrortitle">There is some problem with your internet</string>
    <string name="internetconnectionerrormessage">Please connect to a working Internet connection.</string>
    <string name="gpsenablemessage">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="button_ok">Yes</string>
    <string name="button_cancel">No</string>
    <string name="action_location_found">Location Found</string>


    <string-array name="titles">
        <item >Find Love Instantenously</item>
        <item >Find Love Instantenously</item>
        <item >Find Love Instantenously</item>
        <item>Chat With Your Matches Inside the App</item>
        <item>Set Distance and Age for the Best Matches inside the App</item>
        <item>Filter People with their Interest and Many More</item>
        <item>Free Subscription for one Month to add any Location</item>
    </string-array>

    <string-array name="marray">
        <item>India</item>
        <item>Pakistan</item>
        <item>America</item>
        <item>England</item>
        <item>Russia</item>
        <item>China</item>
        <item>Italy</item>
    </string-array>

    <string name="menuserachpref">Search Preferences</string>
    <string name="menusetting">SETTINGS</string>
    <string name="menuhelp">HELP</string>
    <string name="menushare">SHARE</string>

    <!-- later added -->
    <string name="text_save">Save</string>
    <string name="text_message_jewish">Are you JEWISH or not?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- kishan -->
    <string name="text_questions">Questions</string>
    <string name="text_submit">Submit</string>
    <string name="text_status">Status</string>
    <string name="text_update_status">Change status</string>

    <!-- OSVin:  Login -->
    <string name="osvin_login">Chat with your matches inside the app</string>
    <string name="osvin_privacy_policy">By Continuing,you agree to our terms of Service and privacy policy</string>
    <string name="osvin_below_facebook">We don\'t post anything to facebook</string>
    <string name="title_activity_privacypolicy">Privacypolicy</string>
    <string name="title_activity_terms">Terms</string>
    <string name="title_activity_policy">PolicyActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_profile_details">ProfileDetailsActivity</string>
    <string name="its_a_match">Its a match</string>

</resources>
