<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_left"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_logo"
            android:alpha="2"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menu_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="John Smith"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_edit"
                android:text="Edit Profile" />


        </LinearLayout>


    </RelativeLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4e576c"
        android:orientation="vertical"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/menu_items">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_trans_theme_clicked"
                android:gravity="left|center"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:id="@+id/settingtextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/no_of_messages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_textview"
                    android:layout_marginLeft="14dp"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/appsettextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/selector_trans_theme_clicked"
                android:drawablePadding="10dp"
                android:gravity="center|left"
                android:padding="20dp"
                android:text="@string/menusetting"
                android:textColor="@color/white"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/helptextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/selector_trans_theme_clicked"
                android:drawablePadding="10dp"
                android:gravity="center|left"
                android:padding="20dp"
                android:text="@string/menuhelp"
                android:textColor="@color/white"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/sharetextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/selector_trans_theme_clicked"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:text="@string/menushare"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/selector_trans_theme_clicked"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:text="@string/logoutt"
                android:textColor="@color/white"
                android:textSize="17sp" />


        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#28304f"

        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Rate our app"
            android:textColor="#fdbb1d"
            android:layout_marginTop="18dp"
            android:layout_centerHorizontal="true"
            android:textSize="18sp" />

        <TextView
            android:layout_below="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_centerInParent="true"
            android:text="We'll be your friend forever"
            android:textColor="@android:color/white"
            android:layout_marginBottom="14dp"
            android:textSize="18sp" />


    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rate"
        android:layout_marginTop="-25dp"
        android:layout_alignTop="@+id/footer"
        android:layout_centerInParent="true"/>



</RelativeLayout>